--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -13,6 +13,22 @@
 	  <!--Ползунок для регулировки параметров-->
 	    <input type="range" min="0" max="10"  value="5" id="ball_possesion">	 
 	  <label for="ball_possesion">владение мячом</label>
+	  <br>
+	  <input type="range" min="0" max="1"  value="0" id="counter_attack">	 
+	  <label for="counter_attack">контратака</label>
+	  <br>
+	  <input type="range" min="0" max="10"  value="5" id="pace">	 
+	  <label for="pace">темп</label>
+	  <br>
+	  <input type="range" min="0" max="10"  value="5" id="long_short_pass">	 
+	  <label for="long_short_pass">длинные/короткие пассы</label>
+	  <br>
+	  <input type="range" min="0" max="10"  value="5" id="long_short_shot">	 
+	  <label for="long_short_shot">длинные/короткие удары</label>
+	  <br>
+	  <input type="range" min="0" max="10"  value="5" id="pressing">	 
+	  <label for="pressing">прессинг</label>
+	  <br>
 	  <!--Кнопка начала матча-->
 	    <input type="button"  value="Начать матч" OnClick="start();"  id="start_game">
 		
