--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -29,6 +29,9 @@
 	  <input type="range" min="0" max="10"  value="5" id="pressing">	 
 	  <label for="pressing">прессинг</label>
 	  <br>
+	  <input type="range" min="0.5" max="0.9" step="0.2"  value="0.7" id="difficulty level">	 
+	  <label for="difficulty level">уровень сложности</label>
+	  <br>
 	  <!--Кнопка начала матча-->
 	    <input type="button"  value="Начать матч" OnClick="start();"  id="start_game">
 		
