--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -10,6 +10,9 @@
 	  <!-- Бегущая строка новостей -->
 	     <marquee>Месси переходит в Зенит!
 	     Роналду переходит в Спартак!</marquee>
+		 <!-- Табло -->
+		 <p id="scored">Наша команда 0:0 Команда противника</p>
+
 	  <!--Ползунок для регулировки параметров-->
 	    <input type="range" min="0" max="10"  value="5" id="ball_possesion">	 
 	  <label for="ball_possesion">владение мячом</label>
