--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -10,7 +10,6 @@
 	  <!-- Бегущая строка новостей -->
 	     <marquee>Месси переходит в Зенит!
 	     Роналду переходит в Спартак!</marquee>
-		 <!-- Табло -->
 		 <p id="scored">Наша команда 0:0 Команда противника</p>
 
 	  <!--Ползунок для регулировки параметров-->
@@ -36,13 +35,13 @@
 	  <label for="difficulty level">уровень сложности</label>
 	  <br>
 	  <!--Кнопка начала матча-->
-	    <input type="button"  value="Начать матч" OnClick="start();"  id="start_game">
+	    <input type="button"  value="Матч" OnClick="start();"  id="start_game">
 		
 	  <!--Кнопка завершения матча-->
-	    <input type="button"  value="Завершить матч" OnClick="stop();"  id="stop_game">
+	    <input type="button"  value="Техническое поражение" OnClick="stop();"  id="stop_game">
 	  
 	  <!--Кнопка остановки матча-->
-	    <input type="button"  value="Остановить матч" OnClick="on_pause();"  id="pause_game">
+	    <input type="button"  value="Пауза" OnClick="on_pause();"  id="pause_game">
 	  
    <body bgcolor="white">	
 	 
