--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -46,6 +46,11 @@
 	  	  <!--Выбор соперника-->
 	  <select id="Opponent_team">
 			<option value = "Liverpool">Ливерпуль</option>
+			<option value = "Arsenal">Арсенал</option>
+			<option value = "Chelsea">Челси</option>
+			<option value = "Manchester_City">Манчестер Сити</option>
+			<option value = "Manchester_United">Манчестер Юнайтед</option>
+			<option value = "Tottenham">Тоттенхэм</option>
 			<option value = "Based" selected>База</option>
 		</select>
 	  
