--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -11,6 +11,7 @@
 	     <marquee>Месси переходит в Зенит!
 	     Роналду переходит в Спартак!</marquee>
 		 <p id="scored">Наша команда 0:0 Команда противника</p>
+		 <p id="time"></p>
 
 	  <!--Ползунок для регулировки параметров-->
 	    <input type="range" min="0" max="10"  value="5" id="ball_possesion">	 
