--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -8,11 +8,18 @@
 	 <body>
 	 	 <!-- Здесь всё -->
 	  <!-- Бегущая строка новостей -->
-	     <marquee>Месси переходит в Зенит!
-	     Роналду переходит в Спартак!</marquee>
+	     <marquee>Один сезон - одна попытка</marquee>
 		 <p id="scored">Наша команда 0:0 Команда противника</p>
 		 <p id="time"></p>
-
+       <table align='right'>
+	   <tr><td>1</td><td id = 'first'>1</td></tr>
+	   <tr><td>2</td><td id = 'second'>2</td></tr>
+	   <tr><td>3</td><td id = 'third'>3</td></tr>
+	   <tr><td>4</td><td id = 'four'>4</td></tr>
+	   <tr><td>5</td><td id = 'five'>5</td></tr>
+	   <tr><td>6</td><td id = 'six'>6</td></tr>
+	   
+        </table>
 	  <!--Ползунок для регулировки параметров-->
 	    <input type="range" min="0" max="10"  value="5" id="ball_possesion">	 
 	  <label for="ball_possesion">владение мячом</label>
