--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -11,14 +11,15 @@
 	     <marquee>Один сезон - одна попытка</marquee>
 		 <p id="scored">Наша команда 0:0 Команда противника</p>
 		 <p id="time"></p>
-       <table align='right'>
-	   <tr><td>1</td><td id = 'first'>1</td></tr>
-	   <tr><td>2</td><td id = 'second'>2</td></tr>
-	   <tr><td>3</td><td id = 'third'>3</td></tr>
-	   <tr><td>4</td><td id = 'four'>4</td></tr>
-	   <tr><td>5</td><td id = 'five'>5</td></tr>
-	   <tr><td>6</td><td id = 'six'>6</td></tr>
-	   
+       <table align='center'>
+	   <tr><td>1</td><td id = 'first'>Arsenal</td><td id = 'first_point'>0</td></tr>
+	   <tr><td>2</td><td id = 'second'>Chelsea</td><td id = 'second_point'>0</td></tr>
+	   <tr><td>3</td><td id = 'third'>Tottenham</td><td id = 'third_point'>0</td></tr>
+	   <tr><td>4</td><td id = 'four'>Liverpool</td><td id = 'four_point'>0</td></tr>
+	   <tr><td>5</td><td id = 'five'>Manchester City</td><td id = 'five_point'>0</td></tr>
+	   <tr><td>6</td><td id = 'six'>Manchester United</td><td id = 'six_point'>0</td></tr>
+	   <tr><td>7</td><td id = 'seven'>Based</td><td id = 'seven_point'>0</td></tr>
+
         </table>
 	  <!--Ползунок для регулировки параметров-->
 	    <input type="range" min="0" max="10"  value="5" id="ball_possesion">	 
@@ -54,12 +55,11 @@
 	  	  <!--Выбор соперника-->
 	  <select id="Opponent_team">
 			<option value = "Liverpool">Ливерпуль</option>
-			<option value = "Arsenal">Арсенал</option>
+			<option value = "Arsenal" selected>Арсенал</option>
 			<option value = "Chelsea">Челси</option>
 			<option value = "Manchester_City">Манчестер Сити</option>
 			<option value = "Manchester_United">Манчестер Юнайтед</option>
 			<option value = "Tottenham">Тоттенхэм</option>
-			<option value = "Based" selected>База</option>
 		</select>
 	  
 	  
