--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -9,7 +9,7 @@
 	 	 <!-- Здесь всё -->
 	  <!-- Бегущая строка новостей -->
 	     <marquee>Один сезон - одна попытка</marquee>
-		 <p id="scored">Наша команда 0:0 Команда противника</p>
+		 <p id="scored">You 0:0 Opponent team</p>
 		 <p id="time"></p>
        <table align='center'>
 	   <tr><td>1</td><td id = 'first'>Arsenal</td><td id = 'first_point'>0</td></tr>
@@ -18,7 +18,7 @@
 	   <tr><td>4</td><td id = 'four'>Liverpool</td><td id = 'four_point'>0</td></tr>
 	   <tr><td>5</td><td id = 'five'>Manchester City</td><td id = 'five_point'>0</td></tr>
 	   <tr><td>6</td><td id = 'six'>Manchester United</td><td id = 'six_point'>0</td></tr>
-	   <tr><td>7</td><td id = 'seven'>Based</td><td id = 'seven_point'>0</td></tr>
+	   <tr><td>7</td><td id = 'seven'>You</td><td id = 'seven_point'>0</td></tr>
 
         </table>
 	  <!--Ползунок для регулировки параметров-->
