--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -52,6 +52,8 @@
 	  <!--Кнопка остановки матча-->
 	    <input type="button"  value="Пауза" OnClick="on_pause();"  id="pause_game">
 	  
+	   <!--Кнопка создания расписания матчей-->
+	    <input type="button"  value="Начать сезон!" OnClick="create_calendar();"  id="start_season">
 	  	  <!--Выбор соперника-->
 	  <select id="Opponent_team">
 			<option value = "Liverpool">Ливерпуль</option>
