--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -14,11 +14,11 @@
        <table align='center'>
 	   <tr><td>1</td><td id = 'first'>Arsenal</td><td id = 'first_point'>0</td></tr>
 	   <tr><td>2</td><td id = 'second'>Chelsea</td><td id = 'second_point'>0</td></tr>
-	   <tr><td>3</td><td id = 'third'>Tottenham</td><td id = 'third_point'>0</td></tr>
-	   <tr><td>4</td><td id = 'four'>Liverpool</td><td id = 'four_point'>0</td></tr>
-	   <tr><td>5</td><td id = 'five'>Manchester City</td><td id = 'five_point'>0</td></tr>
-	   <tr><td>6</td><td id = 'six'>Manchester United</td><td id = 'six_point'>0</td></tr>
-	   <tr><td>7</td><td id = 'seven'>You</td><td id = 'seven_point'>0</td></tr>
+	 <!--  <tr><td>3</td><td id = 'third'>Tottenham</td><td id = ''>0</td></tr> -->
+	   <tr><td>3</td><td id = 'third'>Liverpool</td><td id = 'third_point'>0</td></tr>
+	   <tr><td>4</td><td id = 'four'>Manchester City</td><td id = 'four_point'>0</td></tr>
+	   <tr><td>5</td><td id = 'five'>Manchester United</td><td id = 'five_point'>0</td></tr>
+	   <tr><td>6</td><td id = 'six'>You</td><td id = 'six_point'>0</td></tr>
 
         </table>
 	  <!--Ползунок для регулировки параметров-->
@@ -61,7 +61,7 @@
 			<option value = "Chelsea">Челси</option>
 			<option value = "Manchester_City">Манчестер Сити</option>
 			<option value = "Manchester_United">Манчестер Юнайтед</option>
-			<option value = "Tottenham">Тоттенхэм</option>
+			<!--<option value = "Tottenham">Тоттенхэм</option> -->
 		</select>
 	  
 	  
