--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -10,6 +10,7 @@
 	  <!-- Бегущая строка новостей -->
 	     <marquee>Один сезон - одна попытка</marquee>
 		 <p id="scored">You 0:0 Opponent team</p>
+		 <p id="tur">1 тур</p>
 		 <p id="time"></p>
        <table align='center'>
 	   <tr><td>1</td><td id = 'first'>Arsenal</td><td id = 'first_point'>0</td></tr>
@@ -21,6 +22,18 @@
 	   <tr><td>6</td><td id = 'six'>You</td><td id = 'six_point'>0</td></tr>
 
         </table>
+		
+		
+		<table align='center' title='Календарь матчей'>
+	   <tr><td>2 May</td><td id = 'c_1'></td></tr>
+	   <tr><td>6 May</td><td id = 'c_2'></td></tr>
+	 <!--  <tr><td>3</td><td id = 'third'>Tottenham</td></tr> -->
+	   <tr><td>10 May</td><td id = 'c_3'></td></tr>
+	   <tr><td>14 May</td><td id = 'c_4'></td></tr>
+	   <tr><td>19 May</td><td id = 'c_5'></td></tr>
+
+        </table>
+		
 	  <!--Ползунок для регулировки параметров-->
 	    <input type="range" min="0" max="10"  value="5" id="ball_possesion">	 
 	  <label for="ball_possesion">владение мячом</label>
