--- a/Dream Coach.html
+++ b/Dream Coach.html
@@ -15,22 +15,40 @@
        <table align='center'>
 	   <tr><td>1</td><td id = 'first'>Arsenal</td><td id = 'first_point'>0</td></tr>
 	   <tr><td>2</td><td id = 'second'>Chelsea</td><td id = 'second_point'>0</td></tr>
-	 <!--  <tr><td>3</td><td id = 'third'>Tottenham</td><td id = ''>0</td></tr> -->
 	   <tr><td>3</td><td id = 'third'>Liverpool</td><td id = 'third_point'>0</td></tr>
 	   <tr><td>4</td><td id = 'four'>Manchester City</td><td id = 'four_point'>0</td></tr>
 	   <tr><td>5</td><td id = 'five'>Manchester United</td><td id = 'five_point'>0</td></tr>
 	   <tr><td>6</td><td id = 'six'>You</td><td id = 'six_point'>0</td></tr>
+	   <tr><td>7</td><td id = 'seven'>Tottenham</td><td id = 'seven_point'>0</td></tr>
+	   <tr><td>8</td><td id = 'eight'>Real Madrid</td><td id = 'eight_point'>0</td></tr>
+	   <tr><td>9</td><td id = 'nine'>Barcelona</td><td id = 'nine_point'>0</td></tr>
+	   <tr><td>10</td><td id = 'ten'>Atletico Madrid</td><td id = 'ten_point'>0</td></tr>
+	   <tr><td>11</td><td id = 'eleven'>Bayern</td><td id = 'eleven_point'>0</td></tr>
+	   <tr><td>12</td><td id = 'twelve'>Borussia Dortmund</td><td id = 'twelve_point'>0</td></tr>
+	   <tr><td>13</td><td id = 'thirteen'>PSG</td><td id = 'thirteen_point'>0</td></tr>
+	   <tr><td>14</td><td id = 'fourteen'>Milan</td><td id = 'fourteen_point'>0</td></tr>
+	   <tr><td>15</td><td id = 'fiveteen'>Juventus</td><td id = 'fiveteen_point'>0</td></tr>
+	   <tr><td>16</td><td id = 'sixteen'>Inter</td><td id = 'sixteen_point'>0</td></tr>
 
         </table>
 		
 		
-		<table align='center' title='Календарь матчей'>
+		<table align='right' title='Календарь матчей'>
 	   <tr><td>2 May</td><td id = 'c_1'></td></tr>
 	   <tr><td>6 May</td><td id = 'c_2'></td></tr>
-	 <!--  <tr><td>3</td><td id = 'third'>Tottenham</td></tr> -->
 	   <tr><td>10 May</td><td id = 'c_3'></td></tr>
 	   <tr><td>14 May</td><td id = 'c_4'></td></tr>
 	   <tr><td>19 May</td><td id = 'c_5'></td></tr>
+	   <tr><td>21 May</td><td id = 'c_6'></td></tr>
+	   <tr><td>23 May</td><td id = 'c_7'></td></tr>
+	   <tr><td>25 May</td><td id = 'c_8'></td></tr>
+	   <tr><td>27 May</td><td id = 'c_9'></td></tr>
+	   <tr><td>29 May</td><td id = 'c_10'></td></tr>
+	   <tr><td>31 May</td><td id = 'c_11'></td></tr>
+	   <tr><td>2 June</td><td id = 'c_12'></td></tr>
+	   <tr><td>4 June</td><td id = 'c_13'></td></tr>
+	   <tr><td>6 June</td><td id = 'c_14'></td></tr>
+	   <tr><td>8 June</td><td id = 'c_15'></td></tr>
 
         </table>
 		
